# pycon-cron-job

./: README.md
app/: feed_data.py  label_data.py  pyproject.toml
app/data/: data.csv
app/db/: client.py
app/db/models/: base.py  label.py  text.py
