[tool.poetry]
name = "cron-job-python"
version = "0.1.0"
description = ""
authors = ["fajarmuslim <13517149@std.stei.itb.ac.id>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-learn = "1.1.2"
joblib = "^1.2.0"
SQLAlchemy = "^1.4.41"
pandas = "^1.5.0"
psycopg2 = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
